# rust_rocket_demo

./: Cargo.toml  README.md
src/: main.rs
src/lib/: json.rs  mod.rs
src/models/: user.rs
src/utils/: db.rs
