[package]
name = "rocket_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[source.tuna]
registry = "https://mirrors.tuna.tsinghua.edu.cn/git/crates.io-index.git"

[dependencies]
rocket="0.4.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql = "18.2" # 文档：https://github.com/blackbeam/rust-mysql-simple

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json"]
